# discreet

./: .gitignore  Cargo.toml  plot.py  runtest.sh
discreet/: Cargo.toml  README.md
discreet-common/: Cargo.toml
discreet-common/src/: algebra.rs  diff_eq.rs  finite_diff.rs  finite_diff2d.rs  lib.rs  mesh.rs  mesh2d.rs  taylor.rs
discreet-macros/: Cargo.toml
discreet-macros/src/: args.rs  cas.rs  diff_eq.rs  lib.rs  taylor.rs
discreet/src/: diff_eq.rs  finite_diff_2d.rs  lib.rs
docs/: example.tex
testing/: Cargo.toml
testing/src/: example.rs  main.rs
